--- a/Logics/Logics.csproj
+++ b/Logics/Logics.csproj
@@ -125,8 +125,10 @@
     <Compile Include="FamilyImport\FamilyDocumentData.cs" />
     <Compile Include="FamilyImport\ModelImport\FamilyImporter.cs" />
     <Compile Include="FamilyImport\ModelImport\Importers\IImporter.cs" />
+    <Compile Include="FamilyImport\ModelImport\Importers\Implementations\BlendImporter.cs" />
     <Compile Include="FamilyImport\ModelImport\Importers\Implementations\RevolutionImporter.cs" />
     <Compile Include="FamilyImport\ModelImport\Importers\Implementations\ExtrusionImporter.cs" />
+    <Compile Include="FamilyImport\Transforms\BlendTransform.cs" />
     <Compile Include="FamilyImport\Transforms\RevolutionTransform.cs" />
     <Compile Include="FamilyImport\Transforms\ExtrusionTransform.cs" />
     <Compile Include="FamilyImport\Transforms\AbstractTransform.cs" />
