--- a/Logics/Logics.csproj
+++ b/Logics/Logics.csproj
@@ -106,36 +106,40 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FamilyExport\FamilyDocumentWrap.cs" />
-    <Compile Include="FamilyExport\ModelExport\Extractors\Implementations\SweptBlendExtracter.cs" />
-    <Compile Include="FamilyExport\ModelExport\Extractors\Implementations\SweepExtracter.cs" />
-    <Compile Include="FamilyExport\ModelExport\Extractors\Implementations\BlendExtracter.cs" />
-    <Compile Include="FamilyExport\ModelExport\Extractors\Implementations\RevolutionExtracter.cs" />
-    <Compile Include="FamilyExport\ModelExport\FamilyExporter.cs" />
-    <Compile Include="FamilyExport\ModelExport\Extractors\IExtractor.cs" />
-    <Compile Include="FamilyExport\ModelExport\Extractors\Implementations\ExtrusionExtracter.cs" />
-    <Compile Include="FamilyExport\Wraps\Implementations\SweptBlendWrap.cs" />
-    <Compile Include="FamilyExport\Wraps\Implementations\SweepWrap.cs" />
-    <Compile Include="FamilyExport\Wraps\Implementations\BlendWrap.cs" />
-    <Compile Include="FamilyExport\Wraps\Implementations\ExtrusionWrap.cs" />
-    <Compile Include="FamilyExport\Wraps\Implementations\RevolutionWrap.cs" />
-    <Compile Include="FamilyExport\Wraps\Interfaces\AbstractElementData.cs" />
-    <Compile Include="FamilyExport\Wraps\Interfaces\AbstractGenericForm.cs" />
-    <Compile Include="FamilyExport\Wraps\Interfaces\IElement.cs" />
-    <Compile Include="FamilyImport\FamilyDocumentData.cs" />
-    <Compile Include="FamilyImport\ModelImport\FamilyImporter.cs" />
-    <Compile Include="FamilyImport\ModelImport\Importers\IImporter.cs" />
-    <Compile Include="FamilyImport\ModelImport\Importers\Implementations\BlendImporter.cs" />
-    <Compile Include="FamilyImport\ModelImport\Importers\Implementations\SweptBlendImporter.cs" />
-    <Compile Include="FamilyImport\ModelImport\Importers\Implementations\SweepImporter.cs" />
-    <Compile Include="FamilyImport\ModelImport\Importers\Implementations\RevolutionImporter.cs" />
-    <Compile Include="FamilyImport\ModelImport\Importers\Implementations\ExtrusionImporter.cs" />
-    <Compile Include="FamilyImport\Transforms\SweptBlendTransfer.cs" />
-    <Compile Include="FamilyImport\Transforms\BlendTransfer.cs" />
-    <Compile Include="FamilyImport\Transforms\SweepTransfer.cs" />
-    <Compile Include="FamilyImport\Transforms\RevolutionTransfer.cs" />
-    <Compile Include="FamilyImport\Transforms\ExtrusionTransfer.cs" />
-    <Compile Include="FamilyImport\Transforms\AbstractTransfer.cs" />
+    <Compile Include="Export\ModelExport\ProjectExporter.cs" />
+    <Compile Include="Export\ProjectDocumentWrap.cs" />
+    <Compile Include="Export\FamilyDocumentWrap.cs" />
+    <Compile Include="Export\ModelExport\Extractors\Implementations\StructuralColumnExtracter.cs" />
+    <Compile Include="Export\ModelExport\Extractors\Implementations\SweptBlendExtracter.cs" />
+    <Compile Include="Export\ModelExport\Extractors\Implementations\SweepExtracter.cs" />
+    <Compile Include="Export\ModelExport\Extractors\Implementations\BlendExtracter.cs" />
+    <Compile Include="Export\ModelExport\Extractors\Implementations\RevolutionExtracter.cs" />
+    <Compile Include="Export\ModelExport\FamilyExporter.cs" />
+    <Compile Include="Export\ModelExport\Extractors\IExtractor.cs" />
+    <Compile Include="Export\ModelExport\Extractors\Implementations\ExtrusionExtracter.cs" />
+    <Compile Include="Export\Wraps\Implementations\StructuralColumnWrap.cs" />
+    <Compile Include="Export\Wraps\Implementations\SweptBlendWrap.cs" />
+    <Compile Include="Export\Wraps\Implementations\SweepWrap.cs" />
+    <Compile Include="Export\Wraps\Implementations\BlendWrap.cs" />
+    <Compile Include="Export\Wraps\Implementations\ExtrusionWrap.cs" />
+    <Compile Include="Export\Wraps\Implementations\RevolutionWrap.cs" />
+    <Compile Include="Export\Wraps\Interfaces\AbstractElementData.cs" />
+    <Compile Include="Export\Wraps\Interfaces\AbstractGenericForm.cs" />
+    <Compile Include="Export\Wraps\Interfaces\IElement.cs" />
+    <Compile Include="Import\FamilyDocumentData.cs" />
+    <Compile Include="Import\ModelImport\FamilyImporter.cs" />
+    <Compile Include="Import\ModelImport\Importers\IImporter.cs" />
+    <Compile Include="Import\ModelImport\Importers\Implementations\BlendImporter.cs" />
+    <Compile Include="Import\ModelImport\Importers\Implementations\SweptBlendImporter.cs" />
+    <Compile Include="Import\ModelImport\Importers\Implementations\SweepImporter.cs" />
+    <Compile Include="Import\ModelImport\Importers\Implementations\RevolutionImporter.cs" />
+    <Compile Include="Import\ModelImport\Importers\Implementations\ExtrusionImporter.cs" />
+    <Compile Include="Import\Transforms\SweptBlendTransfer.cs" />
+    <Compile Include="Import\Transforms\BlendTransfer.cs" />
+    <Compile Include="Import\Transforms\SweepTransfer.cs" />
+    <Compile Include="Import\Transforms\RevolutionTransfer.cs" />
+    <Compile Include="Import\Transforms\ExtrusionTransfer.cs" />
+    <Compile Include="Import\Transforms\AbstractTransfer.cs" />
     <Compile Include="Geometry\GeometryOperations.cs" />
     <Compile Include="Geometry\Implementation\RevolutionCreator.cs" />
     <Compile Include="Geometry\Implementation\SweptBlendCreator.cs" />
@@ -151,6 +155,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="RevitDocument\FamilyCopier.cs" />
+    <Compile Include="RevitDocument\DocCreator .cs" />
     <Compile Include="RevitDocument\FamilyCreator.cs" />
     <Compile Include="Parameters\ParameterOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
