--- a/StudyTask/StudyTask.csproj
+++ b/StudyTask/StudyTask.csproj
@@ -118,6 +118,7 @@
   <ItemGroup>
     <Compile Include="Configure.cs" />
     <Compile Include="CopyFamilyCommand.cs" />
+    <Compile Include="TestVoid.cs" />
     <Compile Include="DocImport.cs" />
     <Compile Include="DocExport.cs" />
     <Compile Include="Ribbon\MyCubes.cs" />
@@ -134,6 +135,7 @@
     <Compile Include="Ribbon\MyCube.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Files\ProjectData.json" />
     <None Include="Files\FamilyData.json" />
     <None Include="packages.config" />
   </ItemGroup>
